--- a/client/public/index.html
+++ b/client/public/index.html
@@ -71,6 +71,12 @@
             $('[data-toggle="popover"]').popover();   
         });
     </script>  
+
+    <script>
+      $(document).ready(function(){
+        $('[data-toggle="popover"]').popover();   
+      });
+    </script>
     
 
   </body>
