--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ryte-Auto Comparisons</title>
+    <title>Ryte-Car Comparisons</title>
 
 
       <!-- Font Awesome CSS Icons (For cool glyphicons) -->
